--- a/todo-app-tsc/src/App.css
+++ b/todo-app-tsc/src/App.css
@@ -1,29 +1,54 @@
 .App {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   text-align: center;
+  /*background-color: aliceblue;*/
+  background-color: #e0eef3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 50vh;
+.container {
+  height: auto;
+  padding-bottom: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
+form input {
+  height: 35px;
+  width: 165px;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  margin: 40px;
+}
+
+td {
+  margin-top: 5px;
+}
+
+td span {
+  padding: 0px 10px;
+}
+
+button {
+  width: 60px;
+  background-color: #1b0;
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  color: #fff;
+  font-size: 1.05rem;
+  cursor: pointer;
+}
+
 .App-link {
-  color: #fbc561;
+  color: #1d3664;
+  font-weight: 700;
 }
